Initial templates and typography styling

--- a/app/_includes/shared/footer.html
+++ b/app/_includes/shared/footer.html
@@ -1,1 +1,60 @@
-<footer id="footer-primary" class="footer-primary"></footer>
+<footer id="footer-primary" class="footer-primary">
+	<div class="bg-black">
+		<section class="pad-top-s">
+			<div class="two off-one" style="margin-top:-25px;">
+				<a href="/"><img src="/images/assets/logo.png" style="width:90%;"/></a>
+			</div>
+			<div class="seven off-one">
+				<nav>
+					<ul>
+						<li><a href="/about">About Us</a></li>
+						<li><a href="/speakers">Speakers</a></li>
+						<li><a href="/partners">Partners</a></li>
+						<li><a href="/testimonials">Testimonials</a></li>
+						<li><a href="/register">Register</a></li>
+						<li><a href="/news">News</a></li>
+						<li><a href="/contact">Contact Us</a></li>
+						<li><a href="/members">Members</a></li>
+					</ul>
+				</nav>
+
+				<ul class="block-grid four-up contacts pad-top-l pad-bottom-m">
+					<li>
+						<ul>
+							<li class="text-red"><strong>DUBLIN</strong></li>
+							<li>13 Upper Baggot Street</li>
+							<li>Dublin 4</li>
+							<li>&nbsp;</li>
+							<li>+353 1 685 3370</li>
+						</ul>
+					</li>
+					<li>
+						<ul>
+							<li class="text-red"><strong>CORK</strong></li>
+							<li>51 South Mall</li>
+							<li>Cork</li>
+							<li>&nbsp;</li>
+							<li>+353 21 427 8467</li>
+						</ul>
+					</li>
+					<li>
+						<ul>
+							<li class="text-red"><strong>LONDON</strong></li>
+							<li>78 York Street</li>
+							<li>London  W1H 1DP</li>
+							<li>&nbsp;</li>
+							<li>+44 20358 27179	</li>
+						</ul>
+					</li>
+					<li>
+						<ul>
+							<li>F</li>
+							<li>T</li>
+							<li>L</li>
+						</ul>
+					</li>
+				</ul>
+			</div>
+		</section>
+	</div>
+</footer>
