--- a/app/styles/base/_application.scss
+++ b/app/styles/base/_application.scss
@@ -28,8 +28,33 @@
 
 .content-primary {}
 
-.footer-primary {}
+.footer-primary {
+	color:$white;
 
+	.contacts {
+		font-size: 14px;
+	}
+}
+
+nav {
+	font-size:15px;
+
+	ul li {
+		display: inline;
+		list-style-type: none;
+		padding-right: 20px;
+	}
+
+	a {
+		color:$white;
+		padding-bottom:3px;
+	}
+
+	a:hover {
+		color:$white;
+		border-bottom: 1px solid $red;
+	}
+}
 
 
 section {@include outer-container;}
@@ -59,7 +84,15 @@ section {@include outer-container;}
 .off-ten {@include shift(10); }
 .off-eleven {@include shift(11); }
 
+.pad-top-s {padding-top: 3%;}
+.pad-top-m {padding-top: 6%;}
+.pad-top-l {padding-top: 9%;}
+.pad-top-xl {padding-top: 12%;}
 
+.pad-bottom-s {padding-bottom: 3%;}
+.pad-bottom-m {padding-bottom: 6%;}
+.pad-bottom-l {padding-bottom: 9%;}
+.pad-bottom-xl {padding-bottom: 12%;}
 
 .bg-black {
 	background:$black;
@@ -88,4 +121,97 @@ section {@include outer-container;}
 
 .text-black {color:$black;}
 .text-gray {color:$gray;}
-.text-red {color:$red !important;}
+.text-red {
+	color:$red;
+	p, h1, h2, h3, h4, h5, h6 {
+		color:$red;
+	}
+}
+
+
+.red-ul {
+	border-bottom: 1px solid $red;
+}
+
+.link-black-ul a {
+	color:$black;
+	border-bottom: 1px solid $red;
+	&:hover {
+		color:$black;
+		border-bottom: 0px solid $red;
+	}
+}
+
+
+.btn {
+	border: 1px solid $red;
+	font-size: 16px;
+	font-weight: bold;
+	color: $red;
+	text-transform: uppercase;
+	@include pad(13px 20px 13px 20px);
+}
+
+.btn:hover {
+	border: 1px solid white;
+	color: white;
+}
+
+
+.registerButton {
+	border: 1px solid $red;
+	@include pad(50px 10px 30px 10px);
+	font-size: 27px;
+
+	p {
+		width:80%;
+		margin-left:10%;
+	}
+}
+
+
+
+
+.circle {
+	border-radius: 50%;
+	background: red;
+	height:100px;
+	width:auto;
+	/* look at hundred archive */
+}
+
+
+
+/*	--------------------------------------------------
+	:: Block grids
+	
+	These are 2-up, 3-up, 4-up and 5-up ULs, suited
+	for repeating blocks of content. Add 'mobile' to
+	them to switch them just like the layout grid
+	(one item per line) on phones
+	
+	For IE7/8 compatibility block-grid items need to be
+	the same height. You can optionally uncomment the
+	lines below to support arbitrary height, but know
+	that IE7/8 do not support :nth-child.
+	-------------------------------------------------- */
+	
+	.block-grid { display: block; overflow: hidden; }
+	.block-grid>li { display: block; height: auto; float: left; }
+	
+	.block-grid.two-up { margin-left: -4% }
+	.block-grid.two-up>li { margin-left: 4%; width: 46%; margin-bottom: 4%;}
+/* 	.block-grid.two-up>li:nth-child(2n+1) {clear: left;} */
+	
+	.block-grid.three-up { margin-left: -2% }
+	.block-grid.three-up>li { margin-left: 2%; width: 31.3%; margin-bottom: 2%;}
+/* 	.block-grid.three-up>li:nth-child(3n+1) {clear: left;} */
+	
+	.block-grid.four-up { margin-left: -2% }
+	.block-grid.four-up>li { margin-left: 2%; width: 23%; margin-bottom: 2%;}
+/* 	.block-grid.four-up>li:nth-child(4n+1) {clear: left;} */
+	
+	.block-grid.five-up { margin-left: -1.5% }
+	.block-grid.five-up>li { margin-left: 1.5%; width: 18.5%; margin-bottom: 1.5%;}
+/* 	.block-grid.five-up>li:nth-child(5n+1) {clear: left;} */
+
