added more templates and began styling of forms

--- a/app/_includes/shared/footer.html
+++ b/app/_includes/shared/footer.html
@@ -47,10 +47,11 @@
 						</ul>
 					</li>
 					<li>
-						<ul>
-							<li>F</li>
-							<li>T</li>
-							<li>L</li>
+						<ul class="horizontal link-red">
+							<li><a href=""><span class="icon-facebook"></span></a></li>
+							<li><a href=""><span class="icon-twitter"></span></a></li>
+							<li><a href=""><span class="icon-youtube"></span></a></li>
+							<li><a href=""><span class="icon-linkedin"></span></a></li>
 						</ul>
 					</li>
 				</ul>
