--- a/app/_includes/shared/register.html
+++ b/app/_includes/shared/register.html
@@ -3,7 +3,7 @@
 		<div class="six off-three pad-top-l pad-bottom-l text-red">
 			<div class="registerButton">
 				<p class="text-center"><strong>REGISTER NOW</strong></p>
-				<p>Buy tickets and find out the benefits of becoming a Pendulum member</p>
+				<p>if you are ready to start living the life you always dreamed of NOW</p>
 			</div>
 		</div>
 	</section>
