--- a/app/styles/base/_forms.scss
+++ b/app/styles/base/_forms.scss
@@ -1,6 +1,6 @@
 fieldset {
-  background: lighten($base-border-color, 10);
-  border: 1px solid $base-border-color;
+  background: none;
+  border: 1px solid $red;
   margin: 0 0 ($base-line-height / 2) 0;
   padding: $base-line-height;
 }
@@ -10,7 +10,7 @@ label,
 select {
   display: block;
   font-family: $form-font-family;
-  font-size: $form-font-size;
+  font-size: 14px;
 }
 
 label {
@@ -31,10 +31,10 @@ textarea,
 select[multiple=multiple] {
   @include box-sizing(border-box);
   @include transition(border-color);
-  background-color: white;
-  border-radius: $form-border-radius;
-  border: 1px solid $form-border-color;
-  box-shadow: $form-box-shadow;
+  background-color: none !important;
+  border-radius: 0;
+  border: 1px solid $red;
+  box-shadow: none;
   font-family: $form-font-family;
   font-size: $form-font-size;
   margin-bottom: $base-line-height / 2;
@@ -42,12 +42,12 @@ select[multiple=multiple] {
   width: 100%;
 
   &:hover {
-    border-color: $form-border-color-hover;
+    border-color: $white;
   }
 
   &:focus {
-    border-color: $form-border-color-focus;
-    box-shadow: $form-box-shadow-focus;
+    border-color: $white;
+    box-shadow: none;
     outline: none;
   }
 }
@@ -75,4 +75,51 @@ select {
   width: auto;
   max-width: 100%;
   margin-bottom: $base-line-height;
+}
+
+input {
+  background: none;
+  height:50px;
+  font-size: 16px !important;
+  padding-left:10px;
+}
+
+input[type="submit"]{
+  background:none;
+  border:1px solid $red !important;
+  border-radius: 0;
+  font-size: 14px;
+  height:50px;
+  color: $red;
+
+  &:hover {
+    border:1px solid $white !important;
+    background:none;
+    color:white;
+  }
+}
+
+
+.bg-gray fieldset, .bg-gray textarea,
+.bg-gray #{$all-text-inputs},
+.bg-gray select[multiple=multiple]{
+  border: 1px solid $black;
+
+  &:hover {
+    border-color: $red;
+  }
+
+  &:focus {
+    border-color: $red;
+    box-shadow: none;
+    outline: none;
+  }
+}
+
+
+.bg-gray input[type="submit"]{
+  &:hover {
+    border: 1px solid $black !important;
+    color:$black;
+  }
 }
