--- a/app/styles/base/_library.scss
+++ b/app/styles/base/_library.scss
@@ -4,7 +4,18 @@
 }
 
 
-
+/* BG Video */
+video#bgvid {
+  position: fixed; right: 0; bottom: 0;
+  min-width: 100%; min-height: 100%;
+  width: auto; height: auto; z-index: -100;
+  background: url('http://artbees.net/themes/jupiter-demo/wp-content/uploads/2013/10/home-vid-img.jpg') no-repeat;
+  background-size: cover;
+}
+.videoWrap {
+  background: url('/images/about.jpg') no-repeat;
+  background-size: cover;
+}
 
 
 /* News */
