added sticky menu and more index layout

--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -1,4 +1,4 @@
-<header id="header-primary" class="header-primary" style="position:fixed;width:100%;">
+<header id="header header-primary" class="header-primary" style="position:fixed;width:100%;display:none;">
 	
 	<div class="bg-black">
 		<section class="" style="padding-top:30px;">
