--- a/app/_includes/shared/register.html
+++ b/app/_includes/shared/register.html
@@ -1,10 +1,12 @@
-<div class="bg-gray">
+<div class="bg-gray register">
 	<section>
 		<div class="six off-three pad-top-l pad-bottom-l text-red">
-			<div class="registerButton">
-				<p class="text-center"><strong>REGISTER NOW</strong></p>
-				<p>if you are ready to start living the life you always dreamed of NOW</p>
-			</div>
+			<a href="">
+				<div class="registerButton">
+					<p class="text-center"><strong>REGISTER NOW</strong></p>
+					<p>if you are ready to start living the life you always dreamed of NOW</p>
+				</div>
+			</a>
 		</div>
 	</section>
 </div>
