--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -32,5 +32,15 @@
 
     {% include shared/scripts.html %}
     {% include shared/google-analytics.html %}
+
+<script>
+  //initiating jQuery
+  jQuery(function($) {
+    $(document).ready( function() {
+      //enabling stickUp on the '.navbar-wrapper' class
+      $('.navbar-wrapper').stickUp();
+    });
+  });
+</script>
   </body>
 </html>
