--- a/app/_includes/shared/scripts.html
+++ b/app/_includes/shared/scripts.html
@@ -1,4 +1,9 @@
 <!-- build:js({app,.tmp}) /scripts/app.js -->
 <script src="/vendor/jquery/dist/jquery.js"></script>
+
+<script src="/vendor/stickUp/example/stickUp.js"></script>
+
+
 <script src="/scripts/app.js"></script>
+
 <!-- endbuild -->
