--- a/app/styles/base/_library.scss
+++ b/app/styles/base/_library.scss
@@ -11,6 +11,7 @@ video#bgvid {
   width: auto; height: auto; z-index: -100;
   background: url('http://artbees.net/themes/jupiter-demo/wp-content/uploads/2013/10/home-vid-img.jpg') no-repeat;
   background-size: cover;
+  opacity:0.7;
 }
 .videoWrap {
   background: url('/images/about.jpg') no-repeat;
