--- a/app/styles/base/_utilities.scss
+++ b/app/styles/base/_utilities.scss
@@ -61,3 +61,100 @@
 .no-padding {
   padding: 0;
 }
+
+.horizontal li {
+  display: inline;
+  list-style-type: none;
+  padding-right: 20px;
+}
+
+.circle {
+  border-radius: 200px;
+  height:200px !important;
+  width:200px !important;
+  margin-left:auto;
+  margin-right:auto;
+  background-size: cover !important;
+  background-position: center center !important; 
+}
+
+.vidWrap {
+
+}
+
+.pad-top-s {padding-top: 3%;}
+.pad-top-m {padding-top: 6%;}
+.pad-top-l {padding-top: 9%;}
+.pad-top-xl {padding-top: 12%;}
+
+.pad-bottom-s {padding-bottom: 3%;}
+.pad-bottom-m {padding-bottom: 6%;}
+.pad-bottom-l {padding-bottom: 9%;}
+.pad-bottom-xl {padding-bottom: 12%;}
+
+.bg-black {
+  background:$black;
+
+  h1, h2, h3, h4, h5, h6, p {
+    color:$white;
+  }
+}
+
+.bg-gray {
+  background:$gray;
+
+  h1, h2, h3, h4, h5, h6, p {
+    color:$black;
+  }
+}
+
+.bg-white {
+  background:$white;
+
+  h1, h2, h3, h4, h5, h6, p {
+    color:$black;
+  }
+}
+
+
+
+
+.btn {
+  border: 1px solid $red;
+  font-size: 14px;
+  font-weight: bold;
+  color: $red;
+  text-transform: uppercase;
+  @include pad(13px 20px 13px 20px);
+}
+
+.btn:hover {
+  border: 1px solid white;
+  color: white;
+  background:none;
+}
+
+
+.registerButton {
+  border: 1px solid $red;
+  @include pad(50px 10px 30px 10px);
+  font-size: 27px;
+
+  p {
+    width:80%;
+    margin-left:10%;
+  }
+}
+
+
+.on {
+  background:$red;
+  -o-transition:.3s;
+  -ms-transition:.3s;
+  -moz-transition:.3s;
+  -webkit-transition:.3s;
+  transition:.3s;
+  
+  .registerButton {border-color:white;}
+  .registerButton p{color:$white !important;}
+}
