commit before test deploy ugh this is the ugliest thing ever

--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -7,7 +7,7 @@
 			</div>
 			<div class="seven off-one">
 				<nav>
-					<ul>
+					<ul class="menu">
 						<li><a href="/about">About Us</a></li>
 						<li><a href="/speakers">Speakers</a></li>
 						<li><a href="/partners">Partners</a></li>
