--- a/app/_layouts/default.html
+++ b/app/_layouts/default.html
@@ -20,6 +20,48 @@
     <!--[if lt IE 9]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <!--
+/**
+ * @license
+ * MyFonts Webfont Build ID 2859714, 2014-08-08T09:42:02-0400
+ * 
+ * The fonts listed in this notice are subject to the End User License
+ * Agreement(s) entered into by the website owner. All other parties are 
+ * explicitly restricted from using the Licensed Webfonts(s).
+ * 
+ * You may obtain a valid license at the URLs below.
+ * 
+ * Webfont: Gibson Light Italic by Canada Type
+ * URL: http://www.myfonts.com/fonts/canadatype/gibson/light-italic/
+ * 
+ * Webfont: Gibson Bold Italic by Canada Type
+ * URL: http://www.myfonts.com/fonts/canadatype/gibson/bold-italic/
+ * 
+ * Webfont: Gibson Bold by Canada Type
+ * URL: http://www.myfonts.com/fonts/canadatype/gibson/bold/
+ * 
+ * Webfont: Gibson Light by Canada Type
+ * URL: http://www.myfonts.com/fonts/canadatype/gibson/light/
+ * 
+ * 
+ * License: http://www.myfonts.com/viewlicense?type=web&buildid=2859714
+ * Licensed pageviews: 10,000
+ * Webfonts copyright: Copyright &#x00A9; 2011 Rod McDonald. Published by Canada Type.
+ * All rights reserved.
+ * 
+ * © 2014 MyFonts Inc
+*/
+
+-->
+
+<script type="text/javascript">
+//uncomment and change this to false if you're having trouble with WOFFs
+//var woffEnabled = true;
+//to place your webfonts in a custom directory 
+//uncomment this and set it to where your webfonts are.
+var customPath = "/fonts/webfonts";
+</script>
+<script type="text/javascript" src="/fonts/webfonts/prendulum.js"></script>
 
     {% include shared/header.html %}
     {% include shared/nav.html %}
