--- a/app/styles/base/_utilities.scss
+++ b/app/styles/base/_utilities.scss
@@ -69,9 +69,19 @@
 }
 
 .circle {
-  border-radius: 200px;
-  height:200px !important;
-  width:200px !important;
+  border-radius: 175px;
+  height:175px !important;
+  width:175px !important;
+  margin-left:auto;
+  margin-right:auto;
+  background-size: cover !important;
+  background-position: center center !important; 
+}
+
+.circleSmall {
+  border-radius: 125px;
+  height:125px !important;
+  width:125px !important;
   margin-left:auto;
   margin-right:auto;
   background-size: cover !important;
@@ -157,4 +167,41 @@
   
   .registerButton {border-color:white;}
   .registerButton p{color:$white !important;}
+}
+
+
+
+
+
+
+.tabs {
+  li {
+    float:left;
+    width:50%;
+  }
+  li a:not(.active) {
+    border-bottom: 1px solid white;
+  }
+
+  li a.active {
+    border: 1px solid white;
+    border-bottom: 0px solid white;
+  }
+  a {
+    display:block;
+    padding:20px 20px;
+    background: none;
+    
+    &:hover, &.active {
+      font-weight:bold;
+    }
+  }
+}
+.tabgroup {
+  border: 1px solid white;
+  border-top:0px solid white ;
+  div {
+    padding:20px;
+    width: 100%;
+  }
 }
