--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -1,7 +1,7 @@
 // Typography
 $sans-serif: $helvetica;
 $serif: $georgia;
-$base-font-family: $sans-serif;
+$base-font-family:  Gibson-Light, sans-serif;
 $header-font-family: $base-font-family;
 
 // Sizes
