--- a/app/_includes/shared/footer.html
+++ b/app/_includes/shared/footer.html
@@ -1,4 +1,4 @@
-<footer id="footer-primary" class="footer-primary">
+<footer id="footer-primary" class="footer-primary show-on-desktops">
 	<div class="bg-black">
 		<section class="pad-top-s">
 			<div class="two off-one" style="margin-top:-25px;">
@@ -48,11 +48,10 @@
 					</li>
 					<li>
 						<ul class="horizontal link-red">
-							<li><a href=""><span class="icon-facebook"></span></a></li>
-							<li><a href=""><span class="icon-twitter"></span></a></li>
-							<li><a href=""><span class="icon-youtube"></span></a></li>
-							<li><a href=""><span class="icon-linkedin"></span></a></li>
-						</ul>
+							<li><a href="http://www.facebook.com/layapendulum" target="_blank"><span class="icon-facebook"></span></a></li>
+				<li><a href="http://twitter.com/pendulumsummit" target="_blank"><span class="icon-twitter"></span></a></li>
+				<li><a href="http://www.youtube.com/channel/UCCrWs2Ng73PZuKcUWh9ZzhA" target="_blank"><span class="icon-youtube"></span></a></li>
+				<li><a href="http://www.linkedin.com/company/pendulum-summit?trk=cp_followed_name_pendulum-summit" target="_blank"><span class="icon-linkedin"></span></a></li>
 					</li>
 				</ul>
 			</div>
