--- a/app/_includes/shared/header.html
+++ b/app/_includes/shared/header.html
@@ -1,9 +1,9 @@
-<header id="header header-primary" class="header-primary" style="position:fixed;width:100%;display:none;">
-	
-	<div class="bg-black">
+<header id="header header-primary" class="header-primary show-on-desktops" style="position:fixed;width:100%;z-index:100;">
+	<div class="bg-black-t menu-bg" style=""></div>
+
 		<section class="" style="padding-top:30px;">
 			<div class="two off-one" style="margin-top:-25px;">
-				<a href="/"><img src="/images/assets/logo.png" style="width:90%;"/></a>
+				<a href="/"><img src="/images/assets/logo.png" style="width:90%;margin-right:10%;"/></a>
 			</div>
 			<div class="seven off-one">
 				<nav>
@@ -20,8 +20,5 @@
 				</nav>
 			</div>
 		</section>
-	</div>
-
-
 
 </header>
