--- a/app/styles/base/_variables.scss
+++ b/app/styles/base/_variables.scss
@@ -34,8 +34,8 @@ $base-font-color: $dark-gray;
 $base-accent-color: $blue;
 
 // Link Colors
-$base-link-color: $white;
-$hover-link-color: darken($base-accent-color, 15);
+$base-link-color: $red;
+$hover-link-color: $white;
 $base-button-color: $base-link-color;
 $hover-button-color: $hover-link-color;
 
