--- a/app/styles/base/_application.scss
+++ b/app/styles/base/_application.scss
@@ -23,8 +23,6 @@
  */
 
 .header-primary {
-	border-bottom:1px solid $white;
-	opacity:0.8;
 }
 
 .nav-primary {}
@@ -57,6 +55,10 @@ nav {
 		color:$white;
 		border-bottom: 1px solid $red;
 	}
+}
+
+.menu-bg {
+position:absolute;z-index:-10;width:100%;height:90px;
 }
 
 .menu li{
@@ -131,4 +133,97 @@ section {@include outer-container;}
 	.block-grid.five-up>li { margin-left: 1.5%; width: 18.5%; margin-bottom: 1.5%;}
 /* 	.block-grid.five-up>li:nth-child(5n+1) {clear: left;} */
 
+	.block-grid.six-up { margin-left: -1.5% }
+	.block-grid.six-up>li { margin-left: 1.5%; width: 14%; margin-bottom: 1.5%;}
+/* 	.block-grid.six-up>li:nth-child(6n+1) {clear: left;} */
+
+
+
+
+
+
+
+
+
+
+/* -------------------------------------------------- 
+	:: Mobile Visibility Affordances
+---------------------------------------------------*/
+	
+	
+	.show-on-phones { display: none !important; }	
+	.show-on-tablets { display: none !important; }
+	.show-on-desktops { display: block !important; }
+	
+	.hide-on-phones { display: block !important; }	
+	.hide-on-tablets { display: block !important; }
+	.hide-on-desktops { display: none !important; }
+	
+	
+	/* Modernizr-enabled tablet targeting */
+	@media only screen and (max-width: 1280px) and (min-width: 768px) {
+		.touch .hide-on-phones { display: block !important; }
+		.touch .hide-on-tablets { display: none !important; }
+		.touch .hide-on-desktops { display: block !important; }
+		
+		.touch .show-on-phones { display: none !important; }
+		.touch .show-on-tablets { display: block !important; }
+		.touch .show-on-desktops { display: none !important; }
+	}
+	
+		
+	@media only screen and (max-width: 767px) {
+		.hide-on-phones { display: none !important; }
+		.hide-on-tablets { display: block !important; }
+		.hide-on-desktops { display: block !important; }
+		
+		.show-on-phones { display: block !important; }
+		.show-on-tablets { display: none !important; }
+		.show-on-desktops { display: none !important; }
+	}
+	
+	
+	/* Specific overrides for elements that require something other than display: block */
+	
+	table.show-on-desktops { display: table !important; }
+	table.hide-on-phones { display: table !important; }	
+	table.hide-on-tablets { display: table !important; }
+	
+	@media only screen and (max-width: 1280px) and (min-width: 768px) {
+		.touch table.hide-on-phones { display: table !important; }
+		.touch table.hide-on-desktops { display: table !important; }
+		.touch table.show-on-tablets { display: table !important; }
+	}
+	
+	@media only screen and (max-width: 767px) {
+		table.hide-on-tablets { display: table !important; }
+		table.hide-on-desktops { display: table !important; }
+		table.show-on-phones { display: table !important; }
+	}
+	
+
+
+
+
+
+
+
+
+
+@media only screen and (max-width: 767px) { 
+	p {
+		font-size:14px;
+		line-height:21px;
+	}
+
+	h2 {
+		font-size:21px;
+		line-height:24px;
+	}
+
+	.content {
+		padding-left:20px;
+		padding-right:20px;
+	}
+}
 
